# cmake-rust

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeCargo.cmake
crates/test-lib/: CMakeLists.txt
hello_world/: CMakeLists.txt
